@@ -5,3 +5,5 @@ Without any parameter, displays this help text.
 With "knowledge list", you can see all you know. Additionnal parameter can restrict the displayed items, using an invalid one shows the available types.
 
 With "knowledge show <number>", displays details about the specified item.
+
+With "knowledge search <text>", displays things having <text> in summary or detail.
